--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "mocha": "~1.9.0",
     "should": "~1.2.2",
     "connect": "~2.7.6",
-    "express": "~3.2.0",
+    "express": "^4.16.0",
     "connect-redis": "~1.4.5"
   },
   "bugs": {
